--- a/aubout.html
+++ b/aubout.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>DU an 4</h1>
-    <h2>Sửa lần 1</h2>
-    <h2>Ta là hay nhất trên đời</h2>
+    <h1>Rồng Thiên</h1>
 </body>
 </html>
